Bug 139736 - Images and frames in header violate PDF/UA
Summary: Images and frames in header violate PDF/UA
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords: accessibility
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2021-01-18 10:23 UTC by Dustin Matzel
Modified: 2022-12-12 12:16 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Example odt from which the pdf is created (32.27 KB, application/vnd.oasis.opendocument.text)
2021-01-18 10:23 UTC, Dustin Matzel
Details
Created pdf (19.86 KB, application/pdf)
2021-01-18 10:25 UTC, Dustin Matzel
Details
Screenshot of pac3 issues (1.49 MB, image/png)
2021-01-18 10:25 UTC, Dustin Matzel
Details
File edited by Dustin with LO 7.4.4.DEV (32.27 KB, application/vnd.oasis.opendocument.text)
2022-11-04 13:27 UTC, SusanneMohn
Details
New File edited with LO 7.4.4DEV (102.43 KB, application/vnd.oasis.opendocument.text)
2022-11-04 13:28 UTC, SusanneMohn
Details
PDF created with LO 7.4.4.DEV (36.04 KB, application/pdf)
2022-11-04 13:29 UTC, SusanneMohn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dustin Matzel 2021-01-18 10:23:56 UTC
Created attachment 168981 [details]
Example odt from which the pdf is created

Description:
The new PDF/UA export function allows to export PDFs which comply with the PDF/UA standard.
When images or frames are added to the header the pdf export creates pdfs which violate PDF/UA. PAC3 says that these images/paths/texts are objects which are not tagged.
The elements in the header should be tagged as artifact (as far as I know). At the moment VoiceOver (default macOS screenreader) with Adobe Acrobat ignores the elements in the header (as it should be), but to comply the standard they should be tagged as artifacts.

Tested:
Tested on 7.0.3.1 and dialy master build which contains the fix from bug #139643.

Steps to reproduce:
1. Open new Writer document and add a title in the preferences.
2. Add Header and add an image, also set alternate Text for that image.
3. Add a frame with an example text to the header.
3. "Export as PDF..." with "Universal Accessibillity (PDF/UA)" enabled.
4. Test document with PAC3: Image/Text/Path object not tagged.
5. Accessibility check with Adobe Acrobat shows also issues with the image and frame object in header.

Reproducible: Always, all OSs

Attachments:
- Example odt
- Created pdf 
- Screenshot of issues in pac3 (I do not know why the issues itselfs are in german but in english they are: Image object not tagged, Text object not tagged, Path object not tagged)
Comment 1 Dustin Matzel 2021-01-18 10:25:07 UTC
Created attachment 168983 [details]
Created pdf
Comment 2 Dustin Matzel 2021-01-18 10:25:58 UTC
Created attachment 168984 [details]
Screenshot of pac3 issues
Comment 3 Michael Johannfunke 2021-02-04 16:43:18 UTC
I can confirm the bug. This also occurs reproducibly with us.
Comment 4 Christophe Strobbe 2021-08-10 21:16:36 UTC
Adding some background information from the PDF Association's "Tagged PDF Best Practice Guide: Syntax" (Version 1.0, June 2019):

Subchapter 3.7.1: Header and footer content

Page headers and footers are usually placed automatically as a function of pagination. As such this content is not part of the reading-order of the document and is not considered to be “real content.

Subchapter 3.7.2: Page numbers

Page numbers must be marked as artifacts in marked-content sequences with a property list entry Pagination (see ISO 32000-1, Table 330 – Property list entries for artifacts) property).
Accessible page enumeration is enabled through use of the Page Labels (ISO 32000-1, 12.4.2). It is semantically appropriate to have Page Label values match the visible page number.
Comment 5 bugs.documentfoundation.org.unraveled427 2021-10-08 15:48:10 UTC
The same issues arise when defining borders for paragraph or page styles. This yields Path Object not tagged errors.
Comment 6 raal 2022-03-12 08:35:37 UTC
confirmed in comment 3
Comment 7 Commit Notification 2022-10-21 15:37:43 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/72b69b422d33308809070e98a6ea8daad93e16d2

tdf#139736 sw: PDF/UA export: flys in header/footer are Artifacts

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Stahl 2022-10-21 17:01:24 UTC
fixed on master
Comment 9 Commit Notification 2022-10-24 19:04:15 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/f91da6e6063e0494559a015a0ec6ea38fcb30baa

tdf#139736 sw: PDF/UA export: flys in header/footer are Artifacts

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 SusanneMohn 2022-11-04 13:27:38 UTC
Created attachment 183412 [details]
File edited by Dustin with LO 7.4.4.DEV
Comment 11 SusanneMohn 2022-11-04 13:28:32 UTC
Created attachment 183413 [details]
New File edited with LO 7.4.4DEV
Comment 12 SusanneMohn 2022-11-04 13:29:20 UTC
Created attachment 183414 [details]
PDF created with LO 7.4.4.DEV
Comment 13 SusanneMohn 2022-11-04 13:31:22 UTC
Affected users are encouraged to test the fix and report feedback.: I installed LO 7.4.4. DEV and  have performed the Tests. Then exported as PDF and checked with PAC 2021: There were no error messages in the test log
Comment 14 Dustin Matzel 2022-11-10 09:06:38 UTC
I can confirm that the bug is fixed on current 7.4.4 dev.
Thanks a lot for fixing!
Comment 15 Gabor Kelemen (Collabora) 2022-12-12 12:16:42 UTC
Setting verified per latest comments. Thanks for testing!