tdf#139736 sw: PDF/UA export: flys in header/footer are Artifacts

* flys anchored in header/footer cannot simply be ignored, they need to
  get NonStructElement tag which is translated to "/Artifact"
* borders of flys need to get "/Artifact" tag as well; this is also the
  case if they're anchored in the body as veraPDF complains

Change-Id: Id69f0d80c59c3ade295da46c4413a5f0e8d96d54
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141534
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>