sw/source/core/layout/paintfrm.cxx
@@ -4289,12 +4289,15 @@ void SwFlyFrame::PaintSwFrame(vcl::RenderContext& rRenderContext, SwRect const& 
 
     Validate();
 
-    // first paint lines added by fly frame paint
-    // and then unlock other lines.
-    gProp.pSLines->PaintLines( &rRenderContext, gProp );
-    gProp.pSLines->LockLines( false );
-    // have to paint frame borders added in heaven layer here...
-    ProcessPrimitives(gProp.pBLines->GetBorderLines_Clear());
+    {
+        SwTaggedPDFHelper tag(nullptr, nullptr, nullptr, *pShell->GetOut());
+        // first paint lines added by fly frame paint
+        // and then unlock other lines.
+        gProp.pSLines->PaintLines( &rRenderContext, gProp );
+        gProp.pSLines->LockLines( false );
+        // have to paint frame borders added in heaven layer here...
+        ProcessPrimitives(gProp.pBLines->GetBorderLines_Clear());
+    }
 
     PaintDecorators();
 
